# cuda-experiments

./: .gitignore
tma/: CMakeLists.txt  build.sh  run.sh  tma.cu
